--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
   <script type="text/javascript">
     // polyfill
     (function () {
-      const lastTime = 0;
-      const vendors = ['ms', 'moz', 'webkit', 'o'];
-      for (const x = 0; x < vendors.length && !window.requestAnimationFrame; ++x) {
+      var lastTime = 0;
+      var vendors = ['ms', 'moz', 'webkit', 'o'];
+      for (var x = 0; x < vendors.length && !window.requestAnimationFrame; ++x) {
         window.requestAnimationFrame = window[vendors[x] + 'RequestAnimationFrame'];
         window.cancelAnimationFrame =
           window[vendors[x] + 'CancelAnimationFrame'] || window[vendors[x] + 'CancelRequestAnimationFrame'];
@@ -35,9 +35,9 @@
 
       if (!window.requestAnimationFrame)
         window.requestAnimationFrame = function (callback, element) {
-          const currTime = new Date().getTime();
-          const timeToCall = Math.max(0, 16 - (currTime - lastTime));
-          const id = window.setTimeout(function () {
+          var currTime = new Date().getTime();
+          var timeToCall = Math.max(0, 16 - (currTime - lastTime));
+          var id = window.setTimeout(function () {
             callback(currTime + timeToCall);
           }, timeToCall);
           lastTime = currTime + timeToCall;
