--- a/index.html
+++ b/index.html
@@ -120,6 +120,11 @@
       window.play = true
       document.getElementById('user').style = "display:none";
     };
+    // submit input 
+    // document.getElementById('form').onsubmit = function (event) {
+    //   window.play = true
+    //   document.getElementById('user').style = "display:none";
+    // };
   </script>
   <script src="./index.js"></script>
 </body>
