--- a/index.html
+++ b/index.html
@@ -4,12 +4,10 @@
 <head>
   <meta charset="UTF-8" />
   <title>G-Rally Invasion</title>
-  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <style>
     body,
     canvas {
       text-align: center;
-
       background-color: black;
     }
 
@@ -28,7 +26,6 @@
       left: 50%;
       width: 175px;
       margin-left: -87px;
-      font-family: 'Roboto', sans-serif;
       font-size: 24px;
       text-align: center;
     }
@@ -39,7 +36,7 @@
 
     #play {
       background: #e04c2c;
-      font-family: 'Roboto', sans-serif;
+      cursor: pointer;
       color: white;
       text-align: center;
       padding: 8px 12px;
@@ -52,13 +49,13 @@
       top: -200px;
       position: relative;
       z-index: 100;
-
     }
   </style>
   <meta name="viewport" content="width=device-width, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0" />
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <script src="https://www.gstatic.com/firebasejs/4.8.2/firebase.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script>
     var config = {
       apiKey: "AIzaSyCoTQpDqnKUPwlc_5RU8tL7rrSLR_8irMo",
@@ -76,10 +73,14 @@
 <body>
   <div id='container'>
     <canvas id='game'></canvas>
+
+    <div>
+      <a href="./scoreboard.html">scoreboard</a>
+    </div>
   </div>
 
   <div id="user">
-    <img id="image" src="./src/logo.png" style="display:none" />
+    <img id="image" src="./src/images/logo.png" style="display:none" />
     <input autofocus id="name" type="text" placeholder="enter your name" />
     <button id="play">play</button>
   </div>
@@ -111,20 +112,16 @@
           clearTimeout(id);
         };
     })();
+
     // name
     document.getElementById('name').oninput = function (event) {
-      window.name = event.data
+      window.name = event.target.value
     };
     // play button 
     document.getElementById('play').onclick = function (event) {
       window.play = true
       document.getElementById('user').style = "display:none";
     };
-    // submit input 
-    // document.getElementById('form').onsubmit = function (event) {
-    //   window.play = true
-    //   document.getElementById('user').style = "display:none";
-    // };
   </script>
   <script src="./index.js"></script>
 </body>
