--- a/index.html
+++ b/index.html
@@ -26,17 +26,16 @@
 
 <body>
   <div id='container'>
-    <canvas id='game'></canvas>
-  </div>
-
-  <div id="user">
-    <img id="image" src="./src/images/logo.png" style="display:none" />
-    <form id="form">
-      <input autofocus id="name" type="text" placeholder="enter your name" />
-      <button id="play">play</button>
-    </form>
-    <div style="display:none">
-      <a href="./scoreboard.html">scoreboard</a>
+    <canvas id='game' width="320" height="480"></canvas>
+    <div id="user">
+      <img id="image" src="./src/images/logo.png" style="display:none" />
+      <form id="form">
+        <input autofocus id="name" type="text" placeholder="enter your name" />
+        <button id="play">play</button>
+      </form>
+      <div style="display:none">
+        <a href="./scoreboard.html">scoreboard</a>
+      </div>
     </div>
   </div>
 
