--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
   <div id='container'>
     <canvas id='game' width="320" height="480"></canvas>
     <div id="user">
-      <img id="image" src="./src/images/logo.png" style="display:none" />
       <form id="form">
-        <input autofocus id="name" type="text" placeholder="enter your name" />
+        <input value="pete" autofocus id="name" type="text" placeholder="enter your name" />
         <button id="play">play</button>
       </form>
       <div style="display:none">
+        <img id="image" src="./src/images/logo.png" />
         <a href="./scoreboard.html">scoreboard</a>
       </div>
     </div>
@@ -75,7 +75,6 @@
       });
       $('#form').submit(function (event) {
         event.preventDefault();
-        console.log(event);
         if ($('#name').val() === '') return;
         $('#user').hide();
         window.play = true;
