--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
       </form>
       <div style="display:none">
         <img id="image" src="./src/images/logo.png" />
-        <a href="./scoreboard.html">scoreboard</a>
       </div>
+      <a id="score" href="./scoreboard.html">scoreboard</a>
     </div>
   </div>
 
