--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <canvas id='game' width="320" height="480"></canvas>
     <div id="user">
       <form id="form">
-        <input value="pete" autofocus id="name" type="text" placeholder="enter your name" />
+        <input autofocus id="name" type="text" placeholder="enter your name" />
         <button id="play">play</button>
       </form>
       <div style="display:none">
