--- a/scoreboard.html
+++ b/scoreboard.html
@@ -88,7 +88,7 @@
     }
 
     function addScore(name, score, winner) {
-      $('#scoreboard').append(' <div class="score ' + (winner ? 'winner ' : '') + 'clearfix" data-name="' + name + '" data-sort="' + score + '"> <div>' + name + '</div><span>' + score + '<div>' + (!winner && 💀) + '</div></span> </div> ');
+      $('#scoreboard').append(' <div class="score ' + (winner ? 'winner ' : '') + 'clearfix" data-name="' + name + '" data-sort="' + score + '"> <div>' + name + '</div><span>' + score + '<div>' + (!winner && '&#9760;') + '</div></span> </div> ');
     }
 
     const pointsRef = firebase.database().ref('points');
